overflow fixed

--- a/chat-app/src/styles.css
+++ b/chat-app/src/styles.css
@@ -121,7 +121,7 @@ nav {
 .main-container{
   background-color: var(--blue);
   height: 100vh;
-  flex-direction: column;
+  overflow: hidden;
 }
 
 .threads-bar {
@@ -129,7 +129,7 @@ nav {
   flex-direction: column;
   height: 100%;
   width: 30%;
-  float:left
+  float:left;
 }
 
 
@@ -206,7 +206,6 @@ nav {
   width: 90%;
   font-weight: bold;
   font-size: 16px;
-  float: right;
 }
 
 .send-message-wrapper{
@@ -214,7 +213,7 @@ nav {
   display: flex;
   flex-direction: row;
   width: 100%;
-  float:right;
+  padding: 5%;
 }
 
 .sendBtn{
@@ -241,8 +240,8 @@ nav {
 .bubbles-scrollable{
     background-color: var(--white);
     width: 100%;
-    height: 88%;
+    height: 75%;
     overflow-y: scroll;
 }
 
-.main-div{ height: 90%;}
+.main-div{ height: 95%;}
